# raytracer

./: .gitignore  CMakeLists.txt  README.md  flake.nix  justfile
.github/workflows/: checks.yml
Core/: CMakeLists.txt
Core/src/: Raytracer.cpp  Raytracer.hpp  RaytracerConfiguration.hpp  main.cpp
Core/src/engine/: Camera.cpp  Camera.hpp  CameraMan.hpp  Canva.hpp  Color.hpp  Scene.hpp  WorldConfiguration.hpp
Core/src/engine/debug/: DebugDiffuse.cpp  DebugDiffuse.hpp  Diffuse.hpp
Core/src/engine/optimization/: BoundingVolumeHierarchy.hpp
Core/src/engine/renderers/: IRenderer.hpp  PPMRenderer.cpp  PPMRenderer.hpp  RendererFactory.hpp  SDLRenderer.cpp  SDLRenderer.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp
Core/src/parser/: CameraParser.cpp  CameraParser.hpp  MasterParser.cpp  MasterParser.hpp  WorldParser.cpp  WorldParser.hpp
Core/src/plugins/: ModuleLoader.hpp  SafeDL.hpp  SafeDirectoryLister.cpp  SafeDirectoryLister.hpp
Core/src/utils/: FileWatcher.hpp  ProgressBar.hpp
Plugins/: HOWTO.md
Plugins/Cone/: CMakeLists.txt
Plugins/Cone/src/: Cone.cpp  Cone.hpp  ConeParser.cpp  ConeParser.hpp
Plugins/Cylinder/: CMakeLists.txt
Plugins/Cylinder/src/: Cylinder.cpp  Cylinder.hpp  CylinderParser.cpp  CylinderParser.hpp
Plugins/DiElectric/: CMakeLists.txt
Plugins/DiElectric/src/: DiElectric.cpp  DiElectric.hpp  DiElectricParser.cpp  DiElectricParser.hpp
Plugins/Diffuse/: CMakeLists.txt
Plugins/Diffuse/src/: Diffuse.cpp  Diffuse.hpp  DiffuseParser.cpp  DiffuseParser.hpp
Plugins/DirectionalLight/: CMakeLists.txt
Plugins/DirectionalLight/src/: DirectionalLight.cpp  DirectionalLight.hpp  DirectionalLightParser.cpp  DirectionalLightParser.hpp
Plugins/Metal/: CMakeLists.txt
Plugins/Metal/src/: Metal.cpp  Metal.hpp  MetalParser.cpp  MetalParser.hpp
Plugins/Plane/: CMakeLists.txt
Plugins/Plane/src/: Plane.cpp  Plane.hpp  PlaneParser.cpp  PlaneParser.hpp
Plugins/Sphere/: CMakeLists.txt
Plugins/Sphere/src/: Sphere.cpp  Sphere.hpp  SphereParser.cpp  SphereParser.hpp
Plugins/Triangle/: CMakeLists.txt
Plugins/Triangle/src/: Triangle.cpp  Triangle.hpp  TriangleParser.cpp  TriangleParser.hpp
build-native/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/hiroshima/: hiroshima.cfg
lib/MATH/: CMakeLists.txt
lib/MATH/dummy/: CMakeLists.txt  main.cpp
lib/MATH/include/MATH/: Constants.hpp  Interval.hpp  Matrix.hpp  Point.hpp  Vec3.hpp
lib/RACIST/: CMakeLists.txt
lib/RACIST/dummy/: CMakeLists.txt  main.cpp
lib/RACIST/include/RACIST/: AABB.hpp  ANonEmissiveMaterial.hpp  AxisAlignBoundingBox.hpp  Color.hpp  HitRecord.hpp  IMaterial.hpp  IMaterialParser.hpp  IModule.hpp  IObject.hpp  IObjectParser.hpp  Ray.hpp
scenes/: default.cfg  vr.cfg
src/: InternalConfig.hpp  main.cpp
src/engine/: Camera.cpp  Camera.hpp  Canva.hpp  Color.hpp  IObject.hpp  Ray.hpp  Scene.hpp
src/engine/objects/: IObject.hpp  Sphere.cpp  Sphere.hpp
src/engine/renderers/: PPMRenderer.cpp  PPMRenderer.hpp
src/graphics/: Canva.hpp  Color.hpp
src/graphics/renderers/: IRenderer.hpp  PPMRenderer.cpp  PPMRenderer.hpp  SDL2.hpp
src/math/: Constants.hpp  Interval.hpp  Matrix.hpp  Point.hpp  Vec3.hpp
